# dcmtk-pkg-config-test

./: .gitignore  CMakeLists.txt  README.md
dcmdata-test/: CMakeLists.txt
